--- a/pom.xml
+++ b/pom.xml
@@ -320,6 +320,16 @@
             <artifactId>jackson-core-asl</artifactId>
             <version>1.9.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>org.json</artifactId>
+            <version>2.0-NEXUS-3758</version>
+        </dependency>
     </dependencies>
 
     <distributionManagement>
