--- a/pom.xml
+++ b/pom.xml
@@ -330,6 +330,12 @@
             <artifactId>org.json</artifactId>
             <version>2.0-NEXUS-3758</version>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.11</version>
+        </dependency>
+
     </dependencies>
 
     <distributionManagement>
@@ -358,6 +364,13 @@
             <id>codehaus-repo</id>
             <name>Codehaus Repository</name>
             <url>http://dist.codehaus.org/mule/dependencies/maven2</url>
+            <layout>default</layout>
+        </repository>
+
+        <repository>
+            <id>central</id>
+            <name>Central Repo</name>
+            <url>http://repo1.maven.org/maven2/</url>
             <layout>default</layout>
         </repository>
     </repositories>
